# tensorcsp-modern

./: .gitignore  LICENSE  README.md  example_2sat3.py  example_2sat3_modern.py  example_jones.py  example_jones_modern.py  grut.py  grut_modern.py  knut.py  knut_modern.py  pyproject.toml  requirements.txt  tensorcsp.py  tensorcsp_modern.py
.github/workflows/: ci.yml  monthly-maintenance.yml
tests/: test_tensorcsp.py
