[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorcsp"
version = "2.0.0"
description = "Tensor network methods for constraint satisfaction problems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Stefanos Kourtis", email = "kourtis@bu.edu"},
    {name = "Konstantinos Meichanetzidis", email = "phykme@leeds.ac.uk"},
]
keywords = [
    "tensor networks",
    "constraint satisfaction",
    "SAT",
    "counting",
    "Jones polynomial",
    "graph algorithms",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.20.0",
    "networkx>=2.6.0",
]

[project.optional-dependencies]
optimized = ["opt_einsum>=3.3.0"]
metis = ["pymetis>=2020.1"]
polynomial = ["mpmath>=1.2.0"]
all = ["opt_einsum>=3.3.0", "pymetis>=2020.1", "mpmath>=1.2.0"]
legacy = ["python-igraph>=0.9.0"]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/igorrivin/tensorcsp-modern"
Documentation = "https://github.com/igorrivin/tensorcsp-modern#readme"
Repository = "https://github.com/igorrivin/tensorcsp-modern"
"Original Paper" = "https://arxiv.org/abs/1805.00475"

[tool.setuptools.packages.find]
where = ["."]
include = ["tensorcsp*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # line too long - handled by black
